[Portal] Fix: menu overlap in workspace

--- a/portal.theme/trunk/portal/theme/static/css/reset.css
+++ b/portal.theme/trunk/portal/theme/static/css/reset.css
@@ -1369,6 +1369,7 @@ div.main-column #collage h2 {
     margin: 0;
     padding:0;
     float:left;
+
 }
 
 .template-workspace #top-layer ul#portal-personaltools {
@@ -1484,6 +1485,14 @@ div.main-column #collage h2 {
 .section-bungeni-admin #portal-column-one .portlet {
     width: 16em;
     float: left;
+}
+
+dl.portlet.portletNavigationTree {
+    width:300px !important;
+}
+.workspace-under-consideration {
+    clear:both;
+    margin-left:400px;
 }
 /* hides the portlet header. */
 
